[package]

name = "slr_config"
version = "0.0.9" #auto
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/SLRConfig"
documentation = "http://siegelord.github.io/SLRConfig/doc/slr_config/index.html"
keywords = ["configuration"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "A simple configuration format"

[lib]
name = "slr_config"
path = "src/lib.rs"

[[example]]
name = "slr_test"
path = "src/slr_test.rs"

[dependencies.slr_lexer]

path = "../slr_lexer"
version = "=0.0.9" #auto
