[package]

name = "slr_lexer"
version = "0.0.1" #auto
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/SLRConfig"
keywords = ["configuration"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "A simple configuration format. This crate contains just the lexer."

[lib]
name = "slr_lexer"
path = "src/lib.rs"

[[example]]
name = "lexer_test"
path = "src/lexer_test.rs"
