[package]

name = "slr_parser"
version = "0.0.20" #auto
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/SLRConfig"
documentation = "http://siegelord.github.io/SLRConfig/doc/slr_parser/index.html"
keywords = ["configuration"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "A simple configuration format. This crate contains the parser, see the slr_config crate for a more user-friendly API."
edition = "2021"

[lib]
name = "slr_parser"
path = "src/lib.rs"

[[example]]
name = "lexer_test"
path = "src/lexer_test.rs"

[dependencies.serde]
version = "1.0.104"
